ingress-examples/ingress-controller/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  # labels:
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /$1 # depends on your situation
spec:
  ingressClassName: nginx # use ingressClassName to choose external or internal
  rules:
    - host: nginx.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
